[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wave-bwf-rf64"
version = "2.0.1"
description = "Python modules for handling the Broadcast Wave Format and RF64 files."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
Homepage = "https://github.com/nrkno/wave-bwf-rf64/"
Changelog = "https://github.com/nrkno/wave-bwf-rf64/blob/main/CHANGELOG.md"
